--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,14 @@
 
 .Section{
-  max-width: 1140px;
+  max-width: 1590px;
+  margin: 0 auto 0 auto;
+}
+
+label{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .Home,
@@ -8,7 +16,6 @@
 .Internet,
 .TvInternet {
   display: flex;
-  position: static;
   justify-content: center;
   align-items: center;
   height: 90vh;
