--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,7 +1,8 @@
 *{
     font-family: 'Montserrat', sans-serif;
 }
-.navbar{
+
+#navbar{
     width: 100%;
     height: 10vh;
     background: #1b1919;
