--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,6 @@
 
 .Section{
-  max-width: 1590px;
-  margin: 0 auto 0 auto;
-}
-
-label{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  max-width: 1140px;
 }
 
 .Home,
@@ -16,6 +8,7 @@ label{
 .Internet,
 .TvInternet {
   display: flex;
+  position: static;
   justify-content: center;
   align-items: center;
   height: 90vh;
