--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,8 +1,7 @@
 *{
     font-family: 'Montserrat', sans-serif;
 }
-
-#navbar{
+.navbar{
     width: 100%;
     height: 10vh;
     background: #1b1919;
@@ -10,8 +9,7 @@
     align-items: center;
     justify-content: center;
     z-index: 10;
-    position: sticky;
-    top: 0;
+    position: fixed;
 }
 
 .navbar-logo{
