--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -1,7 +1,8 @@
 *{
     font-family: 'Montserrat', sans-serif;
 }
-.navbar{
+
+#navbar{
     width: 100%;
     height: 10vh;
     background: #1b1919;
@@ -9,7 +10,8 @@
     align-items: center;
     justify-content: center;
     z-index: 10;
-    position: fixed;
+    position: sticky;
+    top: 0;
 }
 
 .navbar-logo{
