--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 
 .Section{
   max-width: 1590px;
+  min-height: 90vh;
   margin: 0 auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  box-shadow: 0 0 10px 0 rgb(176 176 176 / 50%);
 }
 
 label{
