--- a/src/css/Cards.css
+++ b/src/css/Cards.css
@@ -24,7 +24,7 @@
 }
 
 .cardContainer:hover {
-    transform: scale(1.10);
+    transform: scale(1.06);
     box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 
                 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 
                 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
@@ -65,7 +65,6 @@
 .btnContratar{
     color: black;
     width: 80%;
-    outline: none;
     border-radius: 16px;
     padding: 6px;
     text-align: center;
@@ -73,4 +72,12 @@
     font-size: 1rem;
     text-decoration: none;
     font: normal normal 800 20px/19px Montserrat;
+}
+
+.btnContratar:hover{
+    color: rgb(0,212,212);
+    background: rgb(255, 255, 255);
+    border-color: black;
+    border-style:solid;
+    border-width: 1px;
 }
