--- a/src/css/Cards.css
+++ b/src/css/Cards.css
@@ -81,3 +81,15 @@
     border-style:solid;
     border-width: 1px;
 }
+
+
+@media only screen and (max-width: 1023px) {
+    .SectionCards{
+        display: flex;
+        flex-direction: column;
+        max-width: 1090px;
+        justify-content: center;
+        margin: auto;
+        background-color: whitesmoke;
+    }
+}
