--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -15,13 +15,9 @@
     top: 0;
 }
 
-.navbar-logo{
-    color: rgb(219, 80, 56);
-    text-decoration: none;
-    font-size: 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.navbar-logo img{
+    max-width: 300px;
+    height: auto;
 }
 
 .navButton{
