--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -48,9 +48,10 @@
 .nav-item{
     display: flex;
     align-items: center;
+    height: 10vh;
 }
 
-.nav-item a{
+.a{
     text-decoration: none;
     color: whitesmoke;
     font-size: 1.2rem;
