--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ label{
   max-width: 25%;
   background-color:rgba(23, 110, 192, 0.5);
   border-radius: 5px;
-  padding: 3rem;
+  white-space: pre-wrap;
   margin: 5%;
   align-items: center;
 }
