--- a/src/components/Cotizador/Cotizador.css
+++ b/src/components/Cotizador/Cotizador.css
@@ -5,7 +5,6 @@
   position: relative;
   background: #f1f1f1;
   margin: auto;
-  word-break: break-all;
   border: 1px solid rgba(0, 0, 0, 0.274);
 }
 
@@ -79,6 +78,7 @@ button {
   flex-direction: column;
   margin: 10px 20px 0 20px;
   text-align: center;
+  justify-content: flex-end;
 }
 
 .tab_infoContainer{
