--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+.alturaMinima{
+  background-color: white;;
+}
 
 .Section{
   max-width: 80%;
@@ -56,7 +58,7 @@ label{
 }
 
 .Cot_Message_Container{
-  max-width: 30%;
+  max-width: 100%;
   background-color:rgba(23, 110, 192, 0.5);
   border-radius: 5px;
   white-space: pre-wrap;
