--- a/src/css/PeticionContrato.css
+++ b/src/css/PeticionContrato.css
@@ -23,7 +23,7 @@
 }
 
 .paqueteMostrado{
-    background-color: #55D8C1;
+    /* background-color: #55D8C1; */
     color: black;
     padding: 1.2rem;
     width: 100%;
